--- a/user-center-backend/src/main/resources/application.yml
+++ b/user-center-backend/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/usercenter_db?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: 0131wyj=
+    password: 
 server:
   port: 8080
 mybatis-plus:
