--- a/user-center-backend/src/main/resources/application.yml
+++ b/user-center-backend/src/main/resources/application.yml
@@ -9,5 +9,10 @@ spring:
 server:
   port: 8080
 mybatis-plus:
+  global-config:
+    db-config:
+      logic-delete-field: isDelete # 全局逻辑删除字段名
+      logic-delete-value: 1 # 逻辑已删除值
+      logic-not-delete-value: 0 # 逻辑未删除值
   configuration:
     map-underscore-to-camel-case: false
