--- a/user-center-backend/src/main/resources/application.yml
+++ b/user-center-backend/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/usercenter_db?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
     password: 123456  # update it to your own password
+  session:
+    timeout: 86400  # session 失效时间
 server:
   port: 8080
 mybatis-plus:
