--- a/user-center-backend/src/main/resources/application.yml
+++ b/user-center-backend/src/main/resources/application.yml
@@ -8,6 +8,20 @@ spring:
     password: 123456  # update it to your own password
   session:
     timeout: 3600  # session 失效时间，为 1h
+  # Redis 配置
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      password:  # 如果有密码，请填写
+      database: 0
+      timeout: 10000ms
+      lettuce:
+        pool:
+          max-active: 8
+          max-wait: -1ms
+          max-idle: 8
+          min-idle: 0
 server:
   port: 8080
 mybatis-plus:
